2009-05-26  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/pxldpl.xml, driver/dplix.xml, opt/160.xml, opt/2.xml,
	  opt/95.xml, opt/PCL-XL-InputSlot.xml, opt/PJL-Duplex.xml,
	  opt/PJL-PJLBinding.xml, opt/PJL-PJLDuplex.xml,
	  opt/pxlmono-GSResolution.xml, opt/pxlmono-JCLResolution.xml,
	  opt/pxlmono-PrinterResolution.xml, opt/pxlmono-PrintoutMode.xml,
	  printer/Dell-3010cn.xml: Added "pxldpl" driver entry for the
	  Dell 3010cn and other DPL printers. DPL is PCL XL in reality but
	  needs an "ENTER LANGUAGE = DPL" PJL command in the beginning of
	  the job. So the DPLiX driver is now replaced by the "pxldpl"
	  driver which simply patches Ghostscript's "pxlcolor" driver
	  output.

2009-05-14  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Epson-AcuLaser_C9200.xml,
	  printer/Epson-AcuLaser_M8000.xml, PPD/Epson/epalc920.ppd,
	  PPD/Epson/epalm800.ppd: Added Epson AcuLaser C9200 and
	  M8000. Thanks to Glen Petrie from Epson for the PPD files.

2009-05-13  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/splix.xml, driver/splix2.xml, printer/Samsung-CLP-550.xml:
	  Updated "splix" driver entry and removed "splix2" driver entry
	  to represent that SpliX 2.0.0 was released.

2009-05-12  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/Postscript-Brother.xml, driver/Postscript-Epson.xml,
	  driver/Postscript-Gestetner.xml, driver/Postscript-HP.xml,
	  driver/Postscript-Infotec.xml,
	  driver/Postscript-KONICA_MINOLTA.xml,
	  driver/Postscript-Kyocera.xml, driver/Postscript-Lanier.xml,
	  driver/Postscript-NRG.xml, driver/Postscript-Oce.xml,
	  driver/Postscript-Oki.xml, driver/Postscript-Ricoh.xml,
	  driver/Postscript-Savin.xml, driver/Postscript-Sharp.xml,
	  driver/Postscript-Toshiba.xml, driver/Postscript2-Oce.xml,
	  driver/pxlcolor-Gestetner.xml, driver/pxlcolor-Infotec.xml,
	  driver/pxlcolor-Lanier.xml, driver/pxlcolor-NRG.xml,
	  driver/pxlcolor-Ricoh.xml, driver/pxlcolor-Savin.xml,