@@ -18,8 +18,11 @@
     Language") in the "ENTER LANGUAGE" PJL command. DPL is nothing
     else then PCL XL.&lt;p&gt;
 
-    Thanks to James "Shamus" Hammons (jlhamm at acm dot org) for
-    finding out that.&lt;p&gt;
+    Thanks to Samuel Degrande for finding out that DPL is PCL-XL in
+    reality and a special driver, as James "Shamus" Hammons' (jlhamm
+    at acm dot org) "dplix" driver is not needed. Thanks to James
+    Hammons for testing this method of using Ghostscript's
+    PCL-XL driver.&lt;p&gt;
 
     The PPDs from this site use an ugly Perl workaround to patch
     Ghostscript's output data stream in order to make paper tray
