@@ -1,3 +1,7 @@
+2009-05-30  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* driver/pxldpl.xml: Updated credits.
+
 2009-05-26  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* driver/pxldpl.xml, driver/dplix.xml, opt/160.xml, opt/2.xml,
